# langchain

./: main.py  pyproject.toml
data/: gutenberg.org_cache_epub_71807_pg71807.txt
